all modified with catalogue section added

--- a/src/index.html
+++ b/src/index.html
@@ -4,130 +4,124 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Ten-Ten Computers</title>
-
-  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-  <!-- Vite CSS Output -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="./scss/style.css" />
 </head>
-<body class="bg-dark text-white">
-
+<body class="bg-primary-dark">
   <!-- NAVIGATION -->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Home</a>
+  <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="./index.html">Ten-Ten Computers</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+        data-bs-target="#navbarNav" aria-controls="navbarNav"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link" href=""></a>
-          <a class="nav-link" href="catalogue.html">Catalogue and pricing</a>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="./catalogue.html">Catalogue</a></li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Contact us 👇
+              Contact Us
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="https://wa.me/2348165773599">Whatsapp</a></li>
-              <li><a class="dropdown-item" href="tel:+2348165773599">Call Us ☎</a></li>
-              <li><a class="dropdown-item" href="mailto:abrahamayomide117@gmail.com">E-mail ✉</a></li>
+              <li><a class="dropdown-item" href="https://wa.me/2348165773599">WhatsApp</a></li>
+              <li><a class="dropdown-item" href="tel:+2348165773599">Call Us</a></li>
+              <li><a class="dropdown-item" href="mailto:abrahamayomide117@gmail.com">E-mail</a></li>
             </ul>
           </li>
-        </div>
+        </ul>
       </div>
     </div>
   </nav>
 
   <!-- WELCOME SECTION -->
-  <section id="welcome" class="lazy-bg my-5 py-5" data-bg="url('header.jpg')">
-    <div class="row justify-content-center">
-      <div class="col-md-10 text-center">
-        <h1 class="fw-bold mb-4 display-5">WELCOME TO TEN-TEN COMPUTERS</h1>
-      </div>
+  <section id="welcome" class="section-bg text-center py-5" data-bg="url('https://kdijhjnkxkrfjlyavcoe.supabase.co/storage/v1/object/public/product-images//header.jpg')">
+    <div class="container">
+      <h1 class="display-4 fw-bold text-white animate__animated animate__fadeIn">Welcome to Ten-Ten Computers</h1>
+      <p class="lead text-light mt-3 animate__animated animate__fadeIn" style="animation-delay: 0.3s;">
+        Your trusted destination for cutting-edge laptops and tech services.
+      </p>
     </div>
   </section>
 
   <!-- HERO SECTION -->
-  <section id="hero" class="lazy-bg container my-5 py-5" data-bg="url('yash-menghani-ejLp_lrQvyI-unsplash.jpg')">
-    <div class="row justify-content-center">
-      <div class="col-md-10 text-center position-relative">
-        <h2 class="mb-4 fw-bold fs-2">Your One-Stop Shop for Laptops & Expert Tech Services</h2>
-        <p class="fs-4 fw-semibold">Sales, Software Installation, Game Setup, Tech Support & More – All In One Place.</p>
-        <div class="d-flex justify-content-center mt-5" style="z-index: 2;">
-          <a href="https://us9.list-manage.com/contact-form?u=90f3e57ae81e71dbf67c9884e&form_id=37207363f4b3cd87ba2facd5e824faca"
-             class="btn btn-outline-light p-3 px-4 fs-5 fw-bold text-decoration-none">
-            Leave us a message
-          </a>
-        </div>
-      </div>
+  <section id="hero" class="section-bg py-5" data-bg="url('https://kdijhjnkxkrfjlyavcoe.supabase.co/storage/v1/object/public/images/hero.jpg')">
+    <div class="container text-center">
+      <h2 class="display-5 fw-bold text-white mb-4 animate__animated animate__fadeIn" style="animation-delay: 0.2s;">
+        Your One-Stop Tech Shop
+      </h2>
+      <p class="fs-4 text-light mb-5 animate__animated animate__fadeIn" style="animation-delay: 0.4s;">
+        Discover top-quality laptops, expert software setup, gaming solutions, and reliable tech support.
+      </p>
+      <a href="https://us9.list-manage.com/contact-form?u=90f3e57ae81e71dbf67c9884e&form_id=37207363f4b3cd87ba2facd5e824faca"
+         class="btn btn-primary btn-lg animate__animated animate__fadeIn" style="animation-delay: 0.6s;">
+        Get in Touch
+      </a>
     </div>
   </section>
 
-  <!-- ABOUT US SECTION -->
-  <section id="about" class="lazy-bg container my-5 py-5" data-bg="url('klim-musalimov-Q_31jEQTE30-unsplash.jpg')">
-    <div class="row justify-content-center">
-      <div class="col-md-10 text-center">
-        <h2 class="fw-bold mb-4 display-5">About Ten-Ten Computers</h2>
-        <p class="fs-4 fw-semibold display-5">
-          At <span class="fw-bold">Ten-Ten Computers</span>, we're passionate about technology and committed to delivering exceptional service.
-          We specialize in the sale of laptops, computer accessories, and professional tech services.
-          Whether you're a student, gamer, business owner, or everyday user, we have something for you.
-        </p>
-        <div class="text-start mt-5">
-          <h3 class="fw-bold mb-3 text-center">Our Services Include:</h3>
-          <ul class="fs-5 fw-semibold">
-            <li>💻 <span class="fw-bold">Laptop Sales</span> (New & Fairly Used)</li>
-            <li>🛠️ <span class="fw-bold">Software Installation & Updates</span></li>
-            <li>🎮 <span class="fw-bold">Game Installation & Configuration</span></li>
-            <li>📞 <span class="fw-bold">Tech Support & Maintenance</span></li>
+  <!-- ABOUT SECTION -->
+  <section id="about" class="section-bg py-5" data-bg="url('https://kdijhjnkxkrfjlyavcoe.supabase.co/storage/v1/object/public/product-images//hero.jpg')">
+    <div class="container">
+      <h2 class="display-5 fw-bold text-white text-center mb-4 animate__animated animate__fadeIn">About Us</h2>
+      <p class="fs-4 text-light text-center mb-5 animate__animated animate__fadeIn" style="animation-delay: 0.2s;">
+        At <span class="fw-bold">Ten-Ten Computers</span>, we’re passionate about technology and dedicated to customer satisfaction.
+      </p>
+      <div class="row justify-content-center">
+        <div class="col-md-8">
+          <ul class="list-unstyled fs-5 text-light text-center animate__animated animate__fadeIn" style="animation-delay: 0.4s;">
+            <li class="mb-3"><span class="fw-bold">💻 Laptop Sales</span> – New & Refurbished</li>
+            <li class="mb-3"><span class="fw-bold">🛠️ Software & Updates</span> – Seamless Installations</li>
+            <li class="mb-3"><span class="fw-bold">🎮 Gaming Setup</span> – Optimized for Performance</li>
+            <li><span class="fw-bold">📞 Tech Support</span> – Always Here to Help</li>
           </ul>
         </div>
-        <p class="fs-4 fw-semibold mt-4">
-          We believe in <span class="fw-bold">quality, transparency, and customer satisfaction</span>.
-          With a growing base of satisfied customers, Ten-Ten Computers is your trusted source for tech you can count on.
-        </p>
       </div>
     </div>
   </section>
-  
 
   <!-- REVIEW FORM SECTION -->
-  <section id="review-form" class="container my-5">
-    <h3 class="text-center mb-4">Leave a Review</h3>
-    <form id="reviewForm" class="bg-secondary p-4 rounded">
-      <div class="mb-3">
-        <label for="username" class="form-label">Name</label>
-        <input type="text" class="form-control" id="username" required />
+  <section id="review-form" class="container py-5">
+    <h2 class="display-5 fw-bold text-white text-center mb-4 animate__animated animate__fadeIn">Leave a Review</h2>
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <form id="reviewForm" class="bg-dark p-4 rounded-3 shadow animate__animated animate__fadeIn" style="animation-delay: 0.2s;">
+          <div class="mb-3">
+            <label for="username" class="form-label fw-bold text-light">Name</label>
+            <input type="text" class="form-control" id="username" required />
+          </div>
+          <div class="mb-3">
+            <label class="form-label fw-bold text-light">Rating</label>
+            <div id="star-rating" class="d-flex justify-content-center gap-2">
+              <input type="radio" id="star5" name="rating" value="5" /><label for="star5" class="star">★</label>
+              <input type="radio" id="star4" name="rating" value="4" /><label for="star4" class="star">★</label>
+              <input type="radio" id="star3" name="rating" value="3" /><label for="star3" class="star">★</label>
+              <input type="radio" id="star2" name="rating" value="2" /><label for="star2" class="star">★</label>
+              <input type="radio" id="star1" name="rating" value="1" /><label for="star1" class="star">★</label>
+            </div>
+          </div>
+          <div class="mb-3">
+            <label for="reviewText" class="form-label fw-bold text-light">Your Review</label>
+            <textarea class="form-control" id="reviewText" rows="4" required></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary w-100">Submit Review</button>
+        </form>
       </div>
-      <div class="mb-3">
-        <label class="form-label">Rating</label>
-        <div id="star-rating" class="d-flex justify-content-center gap-1">
-          <input type="radio" id="star5" name="rating" value="5" /><label for="star5">&#9733;</label>
-          <input type="radio" id="star4" name="rating" value="4" /><label for="star4">&#9733;</label>
-          <input type="radio" id="star3" name="rating" value="3" /><label for="star3">&#9733;</label>
-          <input type="radio" id="star2" name="rating" value="2" /><label for="star2">&#9733;</label>
-          <input type="radio" id="star1" name="rating" value="1" /><label for="star1">&#9733;</label>
-        </div>
-      </div>
-      <div class="mb-3">
-        <label for="reviewText" class="form-label">Your Review</label>
-        <textarea class="form-control" id="reviewText" rows="3" required></textarea>
-      </div>
-      <button type="submit" class="btn btn-light">Submit Review</button>
-    </form>
+    </div>
   </section>
 
   <!-- REVIEW DISPLAY SECTION -->
-  <section id="reviews-display" class="container my-5">
-    <h3 class="text-center mb-4">Customer Reviews</h3>
-    <div id="reviewList" class="bg-secondary p-4 rounded"></div>
+  <section id="reviews-display" class="container py-5">
+    <h2 class="display-5 fw-bold text-white text-center mb-4 animate__animated animate__fadeIn">Customer Reviews</h2>
+    <div id="reviewList" class="bg-dark p-4 rounded-3 shadow"></div>
   </section>
 
   <!-- TOAST NOTIFICATION -->
-  <section class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+  <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
     <div id="successToast" class="toast align-items-center text-white bg-success border-0"
          role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="3000">
       <div class="d-flex">
@@ -135,11 +129,10 @@
         <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
       </div>
     </div>
-  </section>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
   <script type="module" src="./js/main.js"></script>
-
 </body>
 </html>
