--- a/src/catalogue.html
+++ b/src/catalogue.html
@@ -3,67 +3,55 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Catalogue | Ten-Ten Computers</title>
-
-  <!-- Bootstrap -->
+  <title>Ten-Ten Computers - Catalogue</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="/scss/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="./scss/style.css" />
 </head>
-<body class="bg-dark text-white">
-
+<body class="bg-primary-dark">
   <!-- NAVIGATION -->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">Home</a>
+  <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="./index.html">Ten-Ten Computers</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+        data-bs-target="#navbarNav" aria-controls="navbarNav"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link" href="catalogue.html">Catalogue and pricing</a>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link active" aria-current="page" href="./catalogue.html">Catalogue</a></li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Contact us 👇
+              Contact Us
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="https://wa.me/2348165773599">Whatsapp</a></li>
-              <li><a class="dropdown-item" href="tel:+2348165773599">Call Us ☎</a></li>
-              <li><a class="dropdown-item" href="mailto:abrahamayomide117@gmail.com">E-mail ✉</a></li>
+              <li><a class="dropdown-item" href="https://wa.me/2348165773599">WhatsApp</a></li>
+              <li><a class="dropdown-item" href="tel:+2348165773599">Call Us</a></li>
+              <li><a class="dropdown-item" href="mailto:abrahamayomide117@gmail.com">E-mail</a></li>
             </ul>
           </li>
-        </div>
+        </ul>
       </div>
     </div>
   </nav>
 
-  <!-- CATALOGUE HEADER -->
-  <section class="container text-center my-5">
-    <h1 class="fw-bold display-5">Product Catalogue</h1>
-    <p class="text-muted">Browse our latest laptop models available for sale</p>
-  </section>
-
-  <!-- CATALOGUE GRID -->
-  <section class="container pb-5">
-    <div class="row g-4" id="productGrid">
-      <!-- Products will be injected here by JS -->
-    </div>
-  </section>
-
-  <!-- FOOTER -->
-  <footer class="bg-secondary text-center text-white py-4 mt-5">
+  <!-- CATALOGUE SECTION -->
+  <section id="catalogue" class="section-bg py-5" data-bg="url('https://kdijhjnkxkrfjlyavcoe.supabase.co/storage/v1/object/public/images/catalogue.jpg')">
     <div class="container">
-      <p class="mb-1 fw-semibold">© 2025 Ten-Ten Computers. All rights reserved.</p>
-      <p class="mb-0">
-        <a href="mailto:abrahamayomide117@gmail.com" class="text-white text-decoration-underline">abrahamayomide117@gmail.com</a>
-      </p>
+      <h2 class="display-5 fw-bold text-white text-center mb-5 animate__animated animate__fadeIn">
+        Explore Our Laptop Collection
+      </h2>
+      <div class="catalog-container" id="product-catalog">
+        <!-- Products will be dynamically inserted here -->
+      </div>
     </div>
-  </footer>
+  </section>
 
-  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
   <script type="module" src="./js/catalogue.js"></script>
-
 </body>
 </html>
