--- a/src/index.html
+++ b/src/index.html
@@ -120,6 +120,17 @@
     <div id="reviewList" class="bg-dark p-4 rounded-3 shadow"></div>
   </section>
 
+  <!-- FOOTER SECTION -->
+  <footer class="bg-dark text-light py-4">
+    <div class="container text-center">
+      <h5 class="fw-bold mb-3 animate__animated animate__fadeIn">Ten-Ten Computers</h5>
+      
+      <p class="mb-0 animate__animated animate__fadeIn" style="animation-delay: 0.4s;">
+        &copy; 2025 Ten-Ten Computers. All Rights Reserved.
+      </p>
+    </div>
+  </footer>
+
   <!-- TOAST NOTIFICATION -->
   <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
     <div id="successToast" class="toast align-items-center text-white bg-success border-0"
