--- a/src/catalogue.html
+++ b/src/catalogue.html
@@ -50,6 +50,17 @@
     </div>
   </section>
 
+  <!-- FOOTER SECTION -->
+  <footer class="bg-dark text-light py-4">
+    <div class="container text-center">
+      <h5 class="fw-bold mb-3 animate__animated animate__fadeIn">Ten-Ten Computers</h5>
+      
+      <p class="mb-0 animate__animated animate__fadeIn" style="animation-delay: 0.4s;">
+        &copy; 2025 Ten-Ten Computers. All Rights Reserved.
+      </p>
+    </div>
+  </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
   <script type="module" src="./js/catalogue.js"></script>
