--- a/src/index.html
+++ b/src/index.html
@@ -23,17 +23,19 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="./catalogue.html">Catalogue</a></li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Contact Us
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="https://wa.me/2348165773599">WhatsApp</a></li>
-              <li><a class="dropdown-item" href="tel:+2348165773599">Call Us</a></li>
-              <li><a class="dropdown-item" href="mailto:abrahamayomide117@gmail.com">E-mail</a></li>
-            </ul>
-          </li>
         </ul>
+      </div>
+      <div class="d-lg-block ms-3">
+        <div class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle text-light fw-bold" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Contact Us
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li><a class="dropdown-item" href="https://wa.me/2348165773599">WhatsApp</a></li>
+            <li><a class="dropdown-item" href="tel:+2348165773599">Call Us</a></li>
+            <li><a class="dropdown-item" href="mailto:abrahamayomide117@gmail.com">E-mail</a></li>
+          </ul>
+        </div>
       </div>
     </div>
   </nav>
