made the catalogue visible for mobile users

--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,11 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="./catalogue.html">Catalogue</a></li>
         </ul>
       </div>
-      <div class="d-lg-block ms-3">
-        <div class="nav-item dropdown">
+      <div class="d-flex align-items-center ms-3">
+        <a class="nav-link fw-bold text-light" href="./catalogue.html" style="white-space:nowrap;">Catalogue</a>
+        <div class="nav-item dropdown ms-2">
           <a class="nav-link dropdown-toggle text-light fw-bold" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Contact Us
           </a>
