--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,30 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./scss/style.css" />
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "ComputerStore",
+  "name": "TEN-TEN Computers",
+  "image": "https://kdijhjnkxkrfjlyavcoe.supabase.co/storage/v1/object/public/images/logo.png",
+  "url": "https://ten-ten-computers-website.appwrite.network/",
+  "telephone": "+2348165773599",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "16 Olorishade Street",
+    "addressLocality": "Lagos",
+    "addressRegion": "Lagos",
+    "postalCode": "100001",
+    "addressCountry": "NG"
+  },
+  "openingHours": "Mo-Fr 09:00-18:00",
+  "priceRange": "$$",
+  "sameAs": [
+    "https://www.facebook.com/ayomide.olaleye.5/",
+    "https://www.instagram.com/tentencomputers/"
+  ]
+}
+</script>
 </head>
 <body id="index-page" class="bg-primary-dark">
   <!-- NAVIGATION -->
