--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
+  <!-- Google Search Console verification -->
+  <meta name="google-site-verification" content="L9TUZsGlWjC4BQSubedO2W6mkOmPgs6Y874epVZ-4GQ" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Ten-Ten Computers</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" />
