removed sensitive env secret to .env

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   "@type": "ComputerStore",
   "name": "TEN-TEN Computers",
   "image": "https://kdijhjnkxkrfjlyavcoe.supabase.co/storage/v1/object/public/images/logo.png",
-  "url": "https://ten-ten-computers-website.appwrite.network/",
+  "url": "https://ten-ten-computers-website.vercel.app/",
   "telephone": "+2348165773599",
   "address": {
     "@type": "PostalAddress",
