added product search

--- a/src/index.html
+++ b/src/index.html
@@ -91,9 +91,10 @@
           Get in Touch
         </a>
 
+
         <!-- Hero search form (redirects to catalogue with query param) -->
         <form id="heroSearchForm" class="hero-search animate__animated animate__fadeIn" style="animation-delay: 0.6s;" role="search">
-          <input id="heroSearchInput" type="search" class="form-control form-control-lg" placeholder="Search laptops by model or specs (e.g. ThinkPad, Ryzen, 16GB)" aria-label="Search laptops" />
+          <input id="heroSearchInput" type="search" class="form-control form-control-lg" placeholder="Search laptops by model or specs (e.g. HP, Lenovo, Ryzen)" aria-label="Search laptops" />
           <button type="submit" class="btn btn-light btn-lg">Search</button>
         </form>
       </div>
